- finally configured travis-ci properly - added new line to the docker - rebuilt logic - added forms.py files - created model of the order - swagger has been updated
