# models/models.py
@@ -8,24 +8,44 @@ from flask_login import UserMixin
 
 # class User(db.Model, UserMixin):
 #     id = db.Column(db.Integer, primary_key=True)
-#     username = db.Column(db.String(20), unique=True, nullable=False)
 #     name = db.Column(db.String(20), unique=True, nullable=False)
 #     surname = db.Column(db.String(20), unique=True, nullable=False)
-#     age = db.Column(db.Integer, nullable=False)          # table name (lowercase) --->
-#     about = db.Column(db.String(120), unique=True, nullable=False)
 #     email = db.Column(db.String(60), unique=True, nullable=False)
-#     image_file = db.Column(db.String(20) , nullable=False, default='default.jpg')
 #     password = db.Column(db.String(60), nullable=False)
-#     post = db.relationship('Post' , backref = 'author', lazy = True)        # lazy means that sqlalchemy will load the data
-#     def __repr__(self):
-#         return f"User('{self.username}),({self.email}), ({self.image_file})' "
+#     item = db.relationship('Item' , backref='user', lazy=True)        # lazy means that sqlalchemy will load the data
+
+    # def __repr__(self):
+    #     return f"User('{self.username}),({self.email}), ({self.image_file})' "
 
 
 
-# Picture table. By default the table name is filecontent
-def render_picture(data):
-    render_pic = base64.b64encode(data).decode('ascii')
-    return render_pic
+class Order(db.Model):
+    __tablename__ = 'order'''
+    id = db.Column(db.Integer, primary_key=True)
+    name = db.Column(db.String(100))    # it is the file name!!!!!!!!!!!!
+    email = db.Column(db.String(80))
+    address = db.Column(db.String(90))
+    additional_info = db.Column(db.String(500))
+    uuid = db.Column(db.String(36), unique=True)
+
+    # photo = db.Column(db.BINARY) ochen pod voprosom!
+
+    def __init__(self, name, email, address, additional_info):
+        self.name = name
+        self.email = email
+        self.address = address
+        self.additional_info = additional_info
+        self.uuid = str(uuid.uuid4())
+
+    def to_dict(self):
+        return {
+            "id":self.id,
+            "name":self.name,
+            "email":self.email,
+            "address":self.address,
+            "additional_info":self.additional_info,
+            "uuid":self.uuid
+        }
 
 
 class Item(db.Model):
@@ -44,9 +64,10 @@ class Item(db.Model):
     uuid = db.Column(db.String(36), unique=True)
     is_bought = db.Column(db.Boolean, default=False)
     url = db.Column(db.Text)
+    #user_id = db.Column(db.Integer, db.ForeignKey('user.id'),
+     #                     nullable=False)
 
-    def __init__(self,name,url, product_name, description, price, category, is_bought, rendered_data = None, data=None, ):
-
+    def __init__(self,name,url, product_name, description, price, category, is_bought, rendered_data = None, data=None):
             self.name = name
             self.data = data
             self.rendered_data = rendered_data
@@ -60,8 +81,9 @@ class Item(db.Model):
 
     def to_dict(self):
         return {
+            'id': self.id,          #!!!!!!!!!!!!!!!!!
             'name': self.name,
-           # 'data': self.data,
+            # 'data': self.data,
             #'rendered_data':self.rendered_data,
             'product_name': self.product_name,
             'description': self.description,
@@ -69,6 +91,7 @@ class Item(db.Model):
             'category': self.category,
             'uuid':self.uuid,
             'url':self.url,
-            'is_bought':self.is_bought
+            'is_bought':self.is_bought,
+            #'user_id':self.user_id
         }
 
